# Ridango-Sales-MCP

./: .env.example  .gitignore  ONTOLOGY.md  README.md  pyproject.toml
src/kb2/: cli.py  config.py  db.py  mcp.py  models.py  reader.py
src/kb2/semantic/: intent.py  retriever.py  service.py  sql_builder.py
