[project]
name = "ridango-sales-mcp"
version = "0.1.0"
description = "MCP client for the Ridango sales knowledge base — products, capabilities, market intelligence, vendors, tenders. Read-only."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.2",
    "typer[all]>=0.12",
    "rich>=13.7",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
kb2 = "kb2.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kb2"]
